--- a/style.css
+++ b/style.css
@@ -383,6 +383,12 @@ margin-right: -1em;
 	list-style: none outside none;
 }
 
+/*** herança do gov-style.css ***/
+.portlet img, #content img {
+	border-radius: 0px;
+}
+/**fim herança do gov-style.css **/
+
 /* Main style page */
 body {
     background: #FFF;
@@ -390,6 +396,10 @@ body {
 
 object {
 	max-width: 100%;
+}
+
+#site-title {
+    display: none;
 }
 
 #link-go-content {
@@ -426,9 +436,6 @@ object {
     background: none;
 }
 
-#wrap-2 #user{
-	 padding: 0 2em;
-}
 
 /* Overwriting Brasil gov style */
 
@@ -447,13 +454,27 @@ label {
 
 /* Bar Psocial Style - Menu Horizontal*/
 
+#wrap-2 #user{
+	 padding: 0 2em;
+}
+
 #user {
    top: -30px;
    font-size: 12px;
+	position: static;/*teste*/
 }
 
 #user form {
     display:none;
+}
+
+#user .not-logged-in {
+	position: relative;
+	top: -30px;
+}
+
+#user .logged-in {
+	
 }
 
 #barra-brasil {
@@ -512,7 +533,8 @@ label {
 }
 
 #categories_menu {
-    max-width: 960px;
+    /*max-width: 960px;*/
+	padding: 0 1em;
     margin: auto;
 }
 
@@ -1113,52 +1135,174 @@ div#article-parent {
 .action-home-index #content .box-1 .block .read-more {
     float: right;
 }
+ 
+/*Artigo em destaque Grande*/
 
-/*Artigo em destaque*/
 
-.action-home-index #content .box-1 .article-block {
+.action-home-index #wrap-2 .block-outer div.display-content-block {
     background: none;
 }
 
-.action-home-index #content .box-1 .article-block .block-title {
+.action-home-index #wrap-2 .block-outer div.display-content-block .title {
     background: url("images/no-image.gif") no-repeat scroll 0 0 transparent;
     border-bottom: 1px solid #ccc;
     display: block;
-    margin-bottom: 2em;
-    padding-bottom: 2em;
+    margin-bottom: 1em;
+    padding-bottom: 1.5em;
 	 
 }
-
-.action-home-index #content .box-1 .article-block .block-title span {
+.action-home-index #wrap-2 .block-outer div.display-content-block .title,
+.action-home-index #wrap-2 .block-outer div.display-content-block .title a {
     background-color: transparent;
-    font-size: 250%;
+    font-size: 150%;
+    font-style: normal;
+    font-weight: bold;
+	 line-height: 1em;
+
+}
+.action-home-index #wrap-2 .block-outer div.display-content-block .read-more {
+	float: none;
+	margin-top: 4px;
+}
+
+.action-home-index .display-content-block .read_more a{
+    color: transparent;
+	 background: url("images/button-read-more2.png") no-repeat scroll 0 0 transparent;
+    display: inline-block;
+    height: 39px;
+    padding: 7px;
+    text-align: center;
+    width: 161px;
+	 text-indent: -100000px;
+}
+
+.action-home-index #wrap-2 .block-outer div.display-content-block .read-more a,
+.action-home-index #wrap-2 .block-outer div.display-content-block .read-more a:hover {
+
+}
+
+/*conteudo em destaque display content*/
+
+.action-home-index #wrap-2 .block-outer div.display-content-block {
+    left: 50%;
+    margin-left: -480px;
+    width: 960px;
+	 max-height: 300px;
+    overflow: hidden;
+}
+
+.action-home-index #wrap-2 .block-outer div.display-content-block .image{
+    display: inline-block;
+    float: left;
+    margin-right: 3em;
+    width: 480px;
+	 height: 300px;
+	 overflow: hidden;
+}
+
+.action-home-index #wrap-2 .block-outer div.display-content-block .title {
+    display: inline-block;
+    font-size: 120%;
+    font-weight: bold;
+    padding-right: 0;
+    width: 390px;
+}
+.action-home-index #wrap-2 .block-outer div.display-content-block .title a {
+	color: #000;
+}
+
+
+.action-home-index #wrap-2 .block-outer div.display-content-block .lead {
+    display: inline-block;
+    width: 390px;
+    height: 165px;
+    overflow: hidden;
+}
+
+.action-home-index #wrap-2 .block-outer div.display-content-block .lead p{
+	font-size: 92%;
+ 	line-height: 1.5em;
+	word-wrap: break-word;
+}
+.action-home-index #content .display-content-block .lead p img,
+.action-home-index #content .display-content-block .lead p object,
+.action-home-index #content .display-content-block .lead p iframe{
+	display: none;
+}
+
+/*.action-home-index #content .box-1 .display-content-block {
+    display: inline-block;
+    margin-right: 5px;
+	 margin-left: 25px;
+    text-align: left;
+    width: 250px !important;
+}
+
+.action-home-index #content .box-1 .display-content-block ul {
+	margin-left: 0px; 
+}*/
+
+/*dois destaques pequenos*/
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block {
+    left: 0;
+    margin-left: 0;
+    width: auto;
+	 margin-right: 2em;
+}
+
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block .image{
+    width: 230px;
+	 height: 150px;
+	 margin-right: 0em;
+    float: none;
+}
+
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block .title {
+    border-bottom: 0px solid #ccc;
+    display: block;
+    margin-bottom: 0em;
+    padding-bottom: 0em;
+	 width: auto;
+	 height: 25px;
+	 overflow: hidden;
+}
+
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block .title,
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block .title a {
+    background-color: transparent;
+    font-size: 120%;
     font-style: normal;
     font-weight: bold;
 	 line-height: 1em;
     padding: 0;
 }
 
-.action-home-index #content .box-1 .article-block .read-more {
-	float: none;
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block .lead {
+    display: inline-block;
+    width: auto;
+    height: 55px;
+    overflow: hidden;
 }
 
-.action-home-index #content .box-1 .article-block .read-more a {
+.action-home-index .container-block .display-content-block .read_more {
+	/*margin-top: 4px;*/
+}
+/*
+.action-home-index #wrap-2 .block-outer .container-block div.display-content-block .read_more a {}
+*/
+
+.action-home-index .container-block .display-content-block .read_more a{
+	 background: url("images/no-imege.gif") no-repeat scroll 0 0 transparent;
     display: block;
-    height: 39px;
-    width: 161px;
-    text-align: center;
-    padding: 7px;
-    background: url(images/button-read-more2.png) no-repeat;
+    height: auto;
+    padding: 0px;
+    text-align: left;
+    width: auto;
+	 text-indent: 0px;
+	 font-size: 92%;
+    text-decoration: underline;
 }
 
-.action-home-index #content .box-1 .article-block .read-more a,
-.action-home-index #content .box-1 .article-block .read-more a:hover {
-   color: transparent !important;
-}
-
-.action-home-index #content .box-1 .article-block .read-more a:first-child {
-    display: none;
-}
 
 /* Block My Network style */
 
@@ -2219,21 +2363,6 @@ _software,_cultura_e_conhecimentos_livres*/
 	
 }
 
-/*conteudo em destaque display content*/
-.action-home-index #wrap-2 .block-outer div.display-content-block .title {
-	 font-size: 120%;
-    font-weight: bold;
-    padding-right: 0;
-}
-.action-home-index #wrap-2 .block-outer div.display-content-block .title a {
-	color: #000;
-}
-
-.action-home-index #wrap-2 .block-outer div.display-content-block .lead p{
-	font-size: 85%;
- 	line-height: 1.5em;
-}
-
 
 /*Container - Mapa e Comunidades*/
 
@@ -2438,17 +2567,7 @@ _software,_cultura_e_conhecimentos_livres*/
     /*margin-right: 0px;*/
 }
 
-.action-home-index #content .box-1 .display-content-block {
-    display: inline-block;
-    margin-right: 5px;
-	 margin-left: 25px;
-    text-align: left;
-    width: 250px !important;
-}
 
-.action-home-index #content .box-1 .display-content-block ul {
-	margin-left: 0px; 
-}
 .action-home-index #content #content-blocks-inner {
     max-width: 960px;
 }
