--- a/style.css
+++ b/style.css
@@ -2470,7 +2470,7 @@ _software,_cultura_e_conhecimentos_livres*/
 
 }
 
-.communities-block .common-profile-list-block .vcard .profile_link span{
+.common-profile-list-block .vcard .profile_link span{
 	display: inline-block;
 }
 
