--- a/style.css
+++ b/style.css
@@ -2369,6 +2369,7 @@ _software,_cultura_e_conhecimentos_livres*/
 	background-image: url("images/bg-linhas-cinza.png");
 	width: 960px;
 	margin-bottom: 0;
+	padding-bottom: 20px;
 }
 
 /**Mapa**/
