--- a/style.css
+++ b/style.css
@@ -548,51 +548,20 @@ label {
     list-style: none;
     font-size: 12px;
     font-weight: bold;
-    padding: 15px 20px;
+    padding: 0px 20px;
+    height: 100%;
     text-transform: uppercase;
 }
 
-#cat_menu li#category1 {
-    color: #ba4a00
+#cat_menu li:hover {
+    background-color: #E1E4E4;
 }
-#cat_menu li#category2 {
-    color: #3b7390
-}
-#cat_menu li#category3 {
-    color: #643c67
-}
-#cat_menu li#category4 {
-    color: #826938
-}
-#cat_menu li#category5 {
-    color: #1D571F
-}
-#cat_menu li#category6 {
-    color: #017b16
-}
-#cat_menu li#category7 {
-    color: #1a55dd
-}
-#cat_menu li#category8 {
-    color: #753900
-}
-#cat_menu li#category9 {
-    color: #56762b
-}
-#cat_menu li#category10 {
-    color: #3867b7
-}
-#cat_menu li#category11 {
-    color: #00439e
-}
-#cat_menu li#category12 {
-    color: #00A0DB
-}
-#cat_menu li#category13 {
-    color: #AD6500
-}
-#cat_menu li#category14 {
-    color: #DE9200
+
+#cat_menu li a {
+    line-height: 40px;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 /* Search Button */
