--- a/header.rhtml
+++ b/header.rhtml
@@ -86,6 +86,6 @@
 
 <div id="barra-psocial">
   <div id="categories_menu">
-    <%= render :file => 'categories.rhtml' %>
+    <%= theme_include 'categories' %>
   </div>
 </div>
