--- a/gov-style.css
+++ b/gov-style.css
@@ -4,13 +4,13 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,700);
 
-/* reset */
+/* reset
 * {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	vertical-align: baseline;
-}
+} */ 
 
 /****************** Estilos basicos ******************/
 
