--- a/gov-style.css
+++ b/gov-style.css
@@ -2,7 +2,26 @@
    Simples Consultoria - www.simplesconsultoria.com.br
 *********************************************************/
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,700);
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,700);*/
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans Bold';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans Extrabold';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/EInbV5DfGHOiMmvb1Xr-hnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
 
 /* reset
 * {
@@ -215,11 +234,18 @@ div.width-5 {
 	margin: 1em 0px;
 }
 
+#logo a, #logo #portal-title {
+  color: #FFDC19 !important;
+}
+
 #logo #portal-title {
-	margin: 0;
-	color: #fff;
-	font-weight: 800;
-	font-size: 4em;
+  margin: 30px 0px 46px 0px;
+  color: #FFF;
+  font-size: 3.35em;
+  font-family: 'Open Sans Extrabold', Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  line-height: 1em;
+  letter-spacing: -0.05em;
 }
 
 #logo .luongo {
