--- a/header.rhtml
+++ b/header.rhtml
@@ -80,7 +80,7 @@
     <div id="sobre">
       <ul>
         <li id="link-faq">
-          <a href="/portal/faq">Perguntas frequentes</a>
+          <a href="/ajuda/ajuda/duvidas-frequentes">Perguntas frequentes</a>
         </li>
         <li id="link-contact">
           <a href="/contact/portal/new">Contato</a>
