--- a/header.rhtml
+++ b/header.rhtml
@@ -40,7 +40,7 @@
           <a href="#">Alto Contraste</a>
         </li>
         <li>
-          <a href="#">Mapa do Site</a>
+          <a href="/search">Mapa do Site</a>
         </li>
       </ul>
 
