--- a/style.css
+++ b/style.css
@@ -1275,7 +1275,7 @@ div#article-parent {
 }
 
 .action-home-index .container-block .container-block .display-content-block .read_more a{
-	 background: url("images/no-imege.gif") no-repeat scroll 0 0 transparent;
+	 background: url("images/no-image.gif") no-repeat scroll 0 0 transparent;
     display: block;
     height: auto;
     padding: 0px;
