--- a/header.rhtml
+++ b/header.rhtml
@@ -21,7 +21,7 @@
         </li>
         <li>
           <a id="link-buscar" href="#portal-searchbox" accesskey="3">
-            Ir para a Busca
+            Ir para a busca
             <span>3</span>
           </a>
         </li>
@@ -33,13 +33,13 @@
         </li>
       </ul>
       <ul id="portal-siteactions">
-        <li>
+        <li id="siteaction-accessibility">
           <a href="#">Acessibilidade</a>
         </li>
-        <li>
+        <li id="siteaction-contraste">
           <a href="#">Alto Contraste</a>
         </li>
-        <li>
+        <li id="siteaction-mapadosite">
           <a href="#">Mapa do Site</a>
         </li>
       </ul>
