--- a/gov-style.css
+++ b/gov-style.css
@@ -319,6 +319,7 @@ div.width-5 {
 	text-decoration: none;
 	padding: 4px 0 4px 10px;
 	text-transform: uppercase;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif; 
 }
 
 #portal-siteactions a:hover {
@@ -328,7 +329,7 @@ div.width-5 {
 #social-icons {
 	float: right;
 	clear: right;
-	margin: 10px 0;
+	margin: 12px 0px 0px 0px;
 }
 
 #social-icons ul {
@@ -401,9 +402,10 @@ input.searchField {
 }
 
 #portal-searchbox .searchField {
-	padding: 0.35em;
+	padding: 0.45em;
 	border-right: none;
 	border: none;
+  width: 170px;
 }
 
 #searchGadget, #header input.searchButton {
