--- a/style.css
+++ b/style.css
@@ -158,13 +158,15 @@ border-bottom-left-radius: 0.5em;
 -moz-border-radius-bottomright: 0.5em;
 max-width: 50%;
 }
+
 #portal-searchbox {
 float: right;
 text-align: left;
 clear: right;
-margin: 1.2em 0;
+margin: 3.12em 0px 3px 0px;
 font-size: 80%;
 }
+
 #portal-searchbox form {
 white-space: nowrap;
 }
@@ -241,14 +243,14 @@ color: #666666;
 /* */
 /* */
 #portal-siteactions {
-  padding-bottom: 5px;
-  margin-top: -10px;
+  padding-bottom: 2px;
+  margin-top: -15px;
   font-size: 85%;
   text-align: center;
   clear: left;
 }
 #portal-siteactions li {
-margin-right: 0.5em;
+/*margin-right: 0.5em;*/
 }
 #portal-siteactions li a:hover {
 color: #75ad0a
@@ -256,6 +258,12 @@ color: #75ad0a
 #portal-siteactions li a {
   padding: 4px 0px;
 }
+
+#siteaction-accessibility,
+#siteaction-contraste {
+  margin: 0px 15px 0px 0px;
+}
+
 /* */
 /* */
 a.link-parent {
@@ -2720,8 +2728,7 @@ float: none;
 }
 
 .action-home-index #content .tags-block .tag_cloud a:hover {
-  font-size: 12pt !important;
-  color: #FFF !important;
+  color: yellow !important;
 }
 
 /*IE FIX*/
